# server-client

./: .gitignore  .travis.yml  Makefile  Makefile.in  README.md  client.c  config.status  configure  configure.ac  missing  server.c
src/: Makefile  Makefile.am  Makefile.in  client.c  server.c
